# evo_dendritic_learning

./: .gitignore  README.md  auto_dnm_layer.py  auto_dnm_search.py  auto_mdnn.py  auto_mdnn_search.py  benchmark_circles_vs_mlp.py  benchmark_mdnn.py  benchmark_vision.py  benchmark_vs_mlp.py  compare_true_baseline.py  dendritic_layer.py  dendritic_neuron.py  dynamic_unified_dll.py  evo_dll_network.py  evolve_checkerboard.py  evolve_geometry.py  evolved_coordinator.py  lr_sweep.py  pyproject.toml  run_comparisons.py  split_mnist.py  split_mnist_dll.py  split_mnist_dynamic.py  split_mnist_evolved.py  telemetry_mdnn.py  telemetry_sigmoid.py  test_auto_dnm.py  test_auto_mdnn.py  test_deep_dendritic.py  test_evo_dll.py  test_sine.py  train_toy.py
examples/: phase1_forward.py
src/evo_dl/: __init__.py  pyramidal.py
tests/: test_pyramidal.py
