[project]
name = "evo-dl"
version = "0.1.0"
description = "Hybrid neuro-evolutionary pyramidal model experiments in JAX."
requires-python = ">=3.10"
dependencies = [
    "flax>=0.8",
    "jax>=0.4",
    "jaxlib>=0.4",
    "optax>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
